<resources>
    <string name="app_name">Bugiene</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="data_tittle">
        <item>Exploring the Sweet Spot: How to Identify Ripe and Fresh Fruits with the Fruit Freshness Detector App</item>
        <item>Optimizing Fruit Freshness: Expert Tips on Proper Fruit Care and Handling</item>
        <item>Fruit Care for Optimal Health: Unlocking the Secrets to Preserving Nutritional Value and Freshness</item>
        <item>The Fruit Whisperer Guide: Expert Advice on Caring for and Selecting the Freshest Fruits</item>
        <item>The Remarkable Benefits of Fresh Fruits: Nourishing Your Health for a Vibrant Life</item>
    </string-array>
    <string-array name="data_field">
        <item>@string/article_one</item>
        <item>@string/article_two</item>
        <item>@string/article_three</item>
        <item>@string/article_four</item>
        <item>@string/article_five</item>
    </string-array>
    <string name="tittle_contoh">Exploring the Sweet Spot: How to Identify Ripe and Fresh Fruits with the Fruit Freshness Detector App</string>
    <string name="title_activity_detail_article">DetailArticleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="article_one">In the quest for the perfect fruit, freshness and ripeness are key factors that determine the ultimate eating experience. We all want to sink our teeth into a juicy, flavorful fruit at the peak of its ripeness. Thankfully, modern technology has come to the rescue with the Fruit Freshness Detector App, a revolutionary tool that helps us identify ripe and fresh fruits with ease. \n\n
        Gone are the days of guessing or relying solely on visual cues to determine a fruit readiness. The Fruit Freshness Detector App takes advantage of advanced algorithms and sensors to analyze various factors that indicate the freshness and ripeness of a fruit. By simply scanning the fruit using the app, users can obtain valuable information that assists them in selecting the perfect fruit. \n\n
        One of the primary indicators of fruit ripeness is its color. The app utilizes its built-in color recognition system to assess the hue and intensity of the fruit\'s skin. It compares these characteristics with a database of known color profiles for each fruit variety, allowing it to determine whether the fruit is ripe or still in the early stages of ripening. This feature is particularly useful for fruits like bananas, where the transition from green to yellow is a clear indication of ripeness.\n\n
        Texture is another crucial aspect of fruit ripeness, and the Fruit Freshness Detector App excels in this area as well. By analyzing the fruits surface using its touch-sensitive technology, the app can detect changes in texture that occur as a fruit ripens. For example, a perfectly ripe peach will have a slightly soft and velvety texture, indicating that it is ready to be enjoyed. With the apps guidance, users can avoid the disappointment of biting into an unripe or overripe fruit.\n\n
        In addition to color and texture, the app also considers the aroma emitted by the fruit. It leverages its scent recognition capabilities to analyze the volatile compounds released by the fruit, which are indicative of its ripeness. A ripe mango, for instance, will emit a sweet and fragrant aroma, while an unripe one may lack the distinct smell. By incorporating scent analysis, the Fruit Freshness Detector App provides users with a comprehensive assessment of a fruit\'s freshness.\n\n
        The Fruit Freshness Detector App is not only a valuable tool for individual consumers but also for farmers, grocery stores, and fruit vendors. It enables them to accurately assess the ripeness of fruits before selling or distributing them, reducing waste and ensuring customer satisfaction. Additionally, the app can educate consumers about the ideal ripeness stages for different fruits, empowering them to make informed choices and fully enjoy their fruit-buying experience.\n\n
        In conclusion, the Fruit Freshness Detector App is a game-changer in the world of fruit selection. By harnessing the power of advanced technology, this innovative app enables users to identify ripe and fresh fruits with ease. With its ability to analyze color, texture, and aroma, the app provides a comprehensive assessment that ensures you find the perfect fruit every time. So, embark on a journey to the sweet spot of fruit ripeness with the Fruit Freshness Detector App and savor the delight of biting into nature\'s finest offerings.\n\n
    </string>
    <string name="article_two">To ensure the highest level of freshness and flavor in your fruits, it\'s essential to follow expert tips on proper fruit care and handling. These tips will help you optimize the quality and longevity of your favorite fruits, allowing you to enjoy them at their best. From selecting the ripest fruits to storing them correctly, here are some valuable guidelines to consider\n\n
        Choose Ripe Fruits: When purchasing fruits, select ones that are ripe and ready to eat. Look for fruits that are firm but yield slightly to gentle pressure. Avoid fruits that are overly soft or have blemishes, as they may be overripe or nearing spoilage. The aroma of the fruit can also provide a clue to its ripeness. Trust your senses and choose fruits with a pleasant and characteristic fragrance.\n\n
        Handle with Care: Fruits are delicate and can easily bruise or become damaged when mishandled. Avoid dropping or roughly handling them, as this can lead to bruising and accelerated decay. When carrying fruits, hold them gently, especially those with softer skins like berries or peaches. It\'s important to treat fruits with the utmost care to preserve their freshness and texture.\n\n
        Wash Before Consumption: Before consuming or using fruits in recipes, it is crucial to wash them thoroughly. Rinse them under cool, running water to remove any dirt, pesticides, or residue that may be present on the skin. Even if you plan to peel the fruit, washing it beforehand prevents any contaminants from transferring to the flesh when cutting into it.\n\n
        Proper Storage: Correct storage is vital for maintaining fruit freshness. Some fruits, such as apples and citrus fruits, can be stored at room temperature in a cool, dry place away from direct sunlight. However, many fruits benefit from refrigeration to prolong their shelf life. Berries, grapes, and other delicate fruits should be refrigerated to maintain their freshness. For fruits that emit ethylene gas, such as apples and bananas, store them separately from ethylene-sensitive fruits to avoid premature ripening.\n\n
        Use Breathable Containers: Storing fruits in breathable containers can help regulate moisture and prevent moisture buildup that may lead to mold or spoilage. Opt for perforated bags or containers that allow for proper air circulation while retaining the fruit\'s natural moisture. Avoid sealing fruits tightly in plastic bags, as this can accelerate decay.\n\n
        Check and Remove Spoiled Fruits: Regularly inspect your fruit stash for any signs of spoilage or decay. One spoiled fruit can quickly affect the others, so it\'s crucial to remove any affected ones promptly. Moldy or mushy fruits should be discarded to prevent the spread of spoilage and to maintain the freshness of the remaining fruits.\n\n
        By following these expert tips on proper fruit care and handling, you can optimize the freshness, flavor, and longevity of your fruits. Whether you enjoy them as a refreshing snack, incorporate them into meals, or use them for baking, these guidelines will ensure that you savor the natural goodness of your fruits at their peak.\n\n
    </string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="judul_tutor">How do I use the \'Bugiene\' app to scan and determine the freshness of fruits?</string>
    <string name="langkah_satu">1.\tWhen you first log in, you will see the dashboard at the bottom. In the dashboard, there is a camera button. Click the camera button, and a new screen will appear.</string>
    <string name="langkah_dua">2.\tYou can choose the source of the fruit picture. There are two options: gallery and camera. If you choose the gallery, you can select a fruit picture from your photo gallery. If you choose the camera, you can take a picture of the fruit using your device\'s camera. Once you are done, click OK, and you will return to the fresh detection screen. Click the Identify button to detect the fruit from your picture. Afterward, a new screen will appear.</string>
    <string name="langkah_tiga">3.\tThe results screen will display the freshness of your fruit based on the picture you took. It will also show the accuracy of the detection performed by the app, giving you an idea of how accurate the app\'s detection is.</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="detech_message">Tips: Make sure the subject is centered and the background is uncluttered for better results.</string>
    <string name="gambardisplay">gambardisplay</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="submitLogin">Submit</string>
    <string name="easy_to_determined">Easy to Determined</string>
    <string name="message">Bugiene will help you determine the freshness of your fruit and not only that, we will provide you with its history so you can learn from the past. Additionally, our app features a News section where you can read relevant articles on the dashboard.</string>
    <string name="get_started">Get Started</string>
    <string name="loginOnBoarding">Login</string>
    <string name="pic1">pic1</string>
    <string name="pic2">pic2</string>
    <string name="pic3">pic3</string>
    <string name="identify">Identify</string>
</resources>