<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.TutorialActivity">


    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/judul_tutor"
                android:fontFamily="@font/dmsans_bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/langkah_satu"
                android:fontFamily="@font/dmsans_regular"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:contentDescription="@string/pic1"
                android:layout_marginTop="10dp"
                android:src="@drawable/botnav"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/langkah_dua"
                android:fontFamily="@font/dmsans_regular"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:contentDescription="@string/pic2"
                android:layout_marginTop="10dp"
                android:src="@drawable/detech_selection"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="@string/langkah_tiga"
                android:fontFamily="@font/dmsans_regular"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:contentDescription="@string/pic3"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/result_page"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>