<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:layout_width="400dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_question"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/dmsans_medium"
            android:textAlignment="center"
            android:padding="8dp"/>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center">
    
    
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogoutNo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/no"
                android:textSize="18sp"
                android:textColor="@color/PrimeOrange"
                android:background="@drawable/custom_dialog_two"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"/>
    
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogoutYes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/yes"
                android:textSize="18sp"
                android:textColor="@color/PrimeOrange"
                android:background="@drawable/custom_dialog_one"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
    
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>